Initial commit - Banking automation framework